# SOEM

./: CMakeLists.txt
soem/: ethercattype.h
test/linux/SV660N/: CMakeLists.txt  README.md  servoPDO.h  servoshm.h  shmClient.c  shmServer.c  shmViewer.c  shmViewer2LE.c  sv660n_run.c
test/linux/simple_test_ewdl/: CMakeLists.txt  ewdl_csp1.c  ewdl_csv2.c  ewdl_idle0.c  ewdl_pv2.c  ewdl_run.c  registry_idx.h  rxpdo.h  rxpdo2.h  txpdo.h  txpdo2.h
test/linux/simple_test_zhw/: CMakeLists.txt  csdn_pv.c  pppv_pdo2.c  pvmode.c  simple_test_zhw.c  time.h
